--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "^5.9.3"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
