Fix: 移除 type:module 解決 ES module 錯誤
問題:
- package.json 設為 "type": "module"
- 但 dist/ 編譯出的是 CommonJS (exports)
- 導致 npx 執行時報錯: exports is not defined

解決:
- 移除 "type": "module"
- CommonJS 是預設值，與編譯結果匹配
- 版本號: 2.1.0 → 2.1.1

測試:
npx github:jasonlcs/waferlock-robot-mcp-public \
  --api-url https://... \
  --api-token ...

現在可以正常連接 MCP Server ✅

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "waferlock-robot-mcp-public",
-  "version": "1.0.0",
-  "description": "Standalone Waferlock MCP CLI that proxies the public API for ChatGPT Desktop",
-  "type": "module",
+  "version": "2.1.1",
+  "description": "Standalone Waferlock MCP CLI that proxies the public API for ChatGPT Desktop - Now with 31 MCP Tools!",
   "bin": {
     "waferlock-mcp": "dist/cli.js"
   },
