Fix: Add type:module for ES modules

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "waferlock-robot-mcp-public",
   "version": "2.1.1",
   "description": "Standalone Waferlock MCP CLI that proxies the public API for ChatGPT Desktop - Now with 31 MCP Tools!",
+  "type": "module",
   "bin": {
     "waferlock-mcp": "dist/cli.js"
   },
