--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.16.5",
     "typescript": "^5.9.3"
   },
