--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@aws-sdk/s3-request-presigner": "^3.918.0",
     "@modelcontextprotocol/sdk": "^1.20.1",
     "dotenv": "^17.2.3",
+    "faiss-node": "^0.5.1",
+    "hnswlib-node": "^3.0.0",
     "openai": "^6.7.0",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
